background color changed

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,10 @@
  $mainWhite: #ffffff;
  $mainGreen: #82b340;
  $mainGrey: #ececec;
+ $mainOrange: #FF4500;
 
  body{
-     background: $mainWhite;
+     background: $mainOrange;
      color: $mainBlack;
      font-family: 'Open Sans', sans-serif;
  }
